--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ opentelemetry-sdk==1.27.0
 opentelemetry-semantic-conventions==0.48b0
 opentelemetry-util-http==0.48b0
 pip==24.2
+PyAudio==0.2.14
 python-dotenv==1.0.1
 python-iso639==2024.4.27
 python-json-logger==2.0.7
